# sparkapi-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: ApiCode.h  SparkApi.hpp
include/Configs/: AccessTokenConfig.h  Config.h
include/Connections/: AccessTokenConnection.h  Connection.h
include/Utils/: ApiCode.h  StringUtils.h
src/: ApiCode.cpp  SparkApi.cpp  StringUtils.cpp
src/Configs/: AccessTokenConfig.cpp
src/Connections/: AccessTokenConnection.cpp  Connection.cpp
src/utils/: ApiCode.cpp  StringUtils.cpp
